--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,16 @@
-/* You can add global styles to this file, and also import other style files */
-
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body { margin: 0; background-color: #ededed; }
+.main-container {
+  min-height:100%;
+  position:relative;
+}
+.login-content{
+  width: 100%;
+  margin-top: 15px;
+  text-align: center;
+}
+.login-card {
+  width: 350px;
+  margin: auto;
+  padding: 15px !important;
+}
