--- a/src/app/components/auth/login/login.component.css
+++ b/src/app/components/auth/login/login.component.css
@@ -1,3 +1,17 @@
+.login-content{
+  width: 100%;
+  margin-top: 15px;
+  text-align: center;
+}
 .login-card {
-  max-width: 400px;
+  width: 350px;
+  margin: auto;
+  padding: 15px !important;
+}
+.full-width-input {
+  width: 100%;
+}
+
+.registro-btn{
+  display: block;text-align: left;color: #607c8a;
 }
