--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,4 +1,6 @@
 <app-navbar></app-navbar>
 <div class="main-container">
-  <router-outlet></router-outlet>
+<router-outlet></router-outlet>
 </div>
+<!--<app-footer></app-footer>-->
+
