--- a/src/app/components/home/location/location.component.html
+++ b/src/app/components/home/location/location.component.html
@@ -4,7 +4,7 @@
                [hidePageSize]="true">
 </mat-paginator>
 <main class="tab-content">
-  <mat-grid-list cols="3" rowHeight="1:1">
+  <mat-grid-list [cols]="numRows" rowHeight="400">
     <mat-grid-tile *ngFor="let item  of list">
       <mat-card class="card">
         <mat-card-header>
@@ -21,7 +21,7 @@
           </mat-card-subtitle>
         </mat-card-header>
         <div class="pnl-img">
-          <img mat-card-image
+          <img mat-card-image style="max-width: 250px"
                src="https://s3-eu-west-3.amazonaws.com/web-magazines/entornos/deployment/visavis/wp-content/uploads/2020/05/22153120/series_adultos_movil.jpg"
                alt="Lugar">
         </div>
